force-app/main/default/objects/Loan_Product__c/Loan_Product__c.object-meta.xml
<CustomObject>
    <description>Represents an offered lending product</description>
    <label>Loan Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>