force-app/main/default/objects/Loan_Product__c/fields/Day_Count__c.field-meta.xml
<CustomField>
    <fullName>Day_Count__c</fullName>
    <description>The method of calculating the number of days in month and year</description>
    <label>Day Count</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual / Actual</fullName>
                <default>true</default>
                <label>Actual / Actual</label>
            </value>
            <value>
                <fullName>Actual / 365</fullName>
            </value>
            <value>
                <fullName>Actual / 365.25</fullName>
            </value>
            <value>
                <fullName>Actual / 360</fullName>
            </value>
            <value>
                <fullName>30 / 360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>