force-app/main/default/objects/Loan_Product__c/fields/Default_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate__c</fullName>
    <label>Default Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>