force-app/main/default/objects/Loan_Product__c/fields/Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation_Method__c</fullName>
    <label>Interest Calculation Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
                <default>true</default>
                <label>Simple</label>
            </value>
            <value>
                <fullName>Compound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>