force-app/main/default/objects/Loan_Product__c/fields/Interest_Compounding_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Interest_Compounding_Frequency__c</fullName>
    <label>Interest Compounding Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interest_Calculation_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>