force-app/main/default/objects/Loan_Product__c/fields/Interest_Product__c.field-meta.xml
<CustomField>
    <fullName>Interest_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interest Product</label>
    <referenceTo>Interest_Product__c</referenceTo>
    <relationshipName>Loan_Products</relationshipName>
    <type>Lookup</type>
</CustomField>