force-app/main/default/objects/Loan_Product__c/fields/Maximum_Term__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Term__c</fullName>
    <description>The maximum number of months the loan can be borrowed for</description>
    <label>Maximum Term</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>