force-app/main/default/objects/Loan_Product__c/fields/Minimum_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Rate__c</fullName>
    <label>Minimum Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>