force-app/main/default/objects/Loan_Product__c/fields/Minimum_Term__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Term__c</fullName>
    <description>The minimum number of months the loan can be borrowed for</description>
    <label>Minimum Term</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>