force-app/main/default/objects/Loan_Product__c/validationRules/Maximum_and_Minimum_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_and_Minimum_Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Amount__c  &lt;=  Minimum_Amount__c</errorConditionFormula>
    <errorDisplayField>Maximum_Amount__c</errorDisplayField>
    <errorMessage>Maximum Amount must be greater than the Minimum Amount</errorMessage>
</ValidationRule>