force-app/main/default/objects/Loan_Product__c/validationRules/Maximum_and_Minimum_Term_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_and_Minimum_Term_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Term__c  &lt;=  Minimum_Term__c</errorConditionFormula>
    <errorDisplayField>Maximum_Term__c</errorDisplayField>
    <errorMessage>Maximum Term must be greater than the Minimum Term</errorMessage>
</ValidationRule>