force-app/main/default/objects/Loan_Product__c/validationRules/Maximum_Rate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Rate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Rate__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Maximum_Rate__c</errorDisplayField>
    <errorMessage>Minimum Rate must be positive</errorMessage>
</ValidationRule>