force-app/main/default/objects/Loan_Product__c/validationRules/Maximum_Term_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Term_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Term__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Maximum_Term__c</errorDisplayField>
    <errorMessage>Maximum Term must be positive</errorMessage>
</ValidationRule>