force-app/main/default/objects/Loan_Product__c/validationRules/Minimum_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Amount__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Minimum_Amount__c</errorDisplayField>
    <errorMessage>Minimum Amount must be positive</errorMessage>
</ValidationRule>