force-app/main/default/objects/Loan_Product__c/validationRules/Minimum_Rate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Rate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Rate__c &lt;0</errorConditionFormula>
    <errorDisplayField>Minimum_Rate__c</errorDisplayField>
    <errorMessage>Minimum Rate must be positive</errorMessage>
</ValidationRule>