force-app/main/default/objects/Loan_Product__c/validationRules/Minimum_Term_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Term_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Term__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Minimum_Term__c</errorDisplayField>
    <errorMessage>Minimum Term must be positive</errorMessage>
</ValidationRule>