force-app/main/default/objects/Loan_Product__c/validationRules/Precedence_order_must_be_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Precedence_order_must_be_unique</fullName>
    <active>true</active>
    <errorConditionFormula>( TEXT( Principal_Order__c ) == TEXT( Fees_Order__c ) ) ||
( TEXT( Principal_Order__c ) == TEXT( Insurance_Order__c ) ) ||
( TEXT( Principal_Order__c ) == TEXT( Interest_Order__c ) ) ||
( TEXT( Fees_Order__c ) == TEXT( Insurance_Order__c ) ) ||
( TEXT( Fees_Order__c ) == TEXT( Interest_Order__c ) ) ||
( TEXT( Insurance_Order__c ) == TEXT( Interest_Order__c ) )</errorConditionFormula>
    <errorMessage>Ensure each Payment element has a unique priority number between 1 and 4</errorMessage>
</ValidationRule>